--- a/webpersonal/portfolio/templates/portfolio/portfolio.html
+++ b/webpersonal/portfolio/templates/portfolio/portfolio.html
@@ -20,7 +20,7 @@
                 <h2 class="section-heading title">{{project.title}}</h2>   
                 <p>{{project.description}}</p>
                 {% if project.link %}
-                    <p><a href="{{project.link}}">Más información</a></p>
+                    <p><a href="{{project.link}}" target="_blank">Más información</a></p>
                 {% endif %}
             </div>
         </div>
